fix content aligment shifting from one url to another

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
 
 body{
   font-family: var(--font-base);
+
+    overflow-y: scroll;
+ 
+  
 }
 
 input:focus{
